# gdstyle

./: .pre-commit-hooks.yaml  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_suggestion.yml
gdstyle-gdext/: Cargo.toml
godot-plugin/addons/gdstyle/: gdstyle_panel.gd  plugin.cfg
src/: ast.rs  lexer.rs  linter.rs  parser.rs
src/rules/: quality.rs
tests/: integration_test.rs
