[package]
name = "gdstyle"
version = "0.1.5"
edition = "2021"
authors = ["Piero Molino <w4nderlust@gmail.com>"]
description = "A fast, opinionated linter and formatter for GDScript (Godot 4.x)"
license = "MIT"
repository = "https://github.com/atelico/gdstyle"
homepage = "https://github.com/atelico/gdstyle"
documentation = "https://docs.rs/gdstyle"
readme = "README.md"
keywords = ["godot", "gdscript", "linter", "formatter", "gamedev"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
globset = "0.4"
serde_json = "1"
rayon = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "gdstyle"
path = "src/main.rs"

[lib]
name = "gdstyle"
path = "src/lib.rs"

[workspace]
members = ["gdstyle-gdext"]

[profile.release]
lto = true
codegen-units = 1
strip = true
